# Unsup-defect-streams-corruption

./: .gitignore  B_P.md  Dockerfile  METHOD.md  PLAN job A_analize val_defect.md  PLAN.md  PLAN_serializacion.md  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  runtime_main.py  tmpclaude-2cbc-cwd
.claude/: settings.local.json
data/: .dataset_path_history.json
docs/: HPC_KU_LEUVEN_RUNBOOK.md
memory/: MEMORY.md  feedback_ondemand_terminal.md  project_rd4ad_stub.md  project_wice_setup.md
notebooks/: analyze jobA.ipynb  analyze jobB.ipynb  benchmark_graphs and tables.ipynb  build_analyze_jobB.py  compare jobB vs jobA.ipynb  example_notebook.ipynb  jobC_corruption_run_colab.ipynb  run_jobA_colab.ipynb  run_jobA_trained_colab.ipynb  run_jobA_val_defect_colab.ipynb  run_jobB_colab.ipynb  run_jobB_trained_colab.ipynb  run_jobB_val_defect_colab.ipynb  run_streaming_colab.ipynb
scripts/: analyze_jobA.py  analyze_runs.py  compare_clean_vd.py  main.py  run_example.py  run_jobA_colab.sh  run_jobA_trained_colab.sh  run_jobA_trained_wice.sh  run_jobA_val_defect_colab.sh  run_jobB_colab.sh  run_jobB_trained_colab.sh  run_jobB_val_defect_colab.sh  run_jobC.sh  run_smoke_corruption.sh  run_streaming_colab.sh
src/: benchmark.py  corruption.py  metrics.py  models.py  schemas.py  stream.py  visualization.py
src/benchmark_AD/: __init__.py  data.py  default.yaml  evaluation.py  models.py  pipeline.py  sequence-format input.py
src/benchmark_AD.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/benchmark_AD/configs/: colab_featurebased.yaml  colab_featurebased_deceuninck.yaml  colab_featurebased_deceuninck_val_defect.yaml  colab_featurebased_val_defect.yaml  colab_jobC_deceuninck.yaml  colab_jobC_realiad.yaml  colab_trained.yaml  colab_trained_deceuninck.yaml  wice_jobC_realiad.yaml  wice_trained.yaml
src/corruptions/: corruption_registry.py  test_corruption.py  test_loader.py  test_pipeline_benchmark.py  test_registry.py
src/inspection_realtime/: __init__.py  app.py  artifacts.py  contracts.py  decision_engine.py  input_handler.py  live_metrics.py  model_registry.py  object_classifier.py  predictor.py  report_generator.py  settings.py  settings.yaml  state_manager.py  transition_detector.py  webapp.py
src/python_project_template/: __init__.py  core.py
src/real_time_visual_defect_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/real_time_visual_defect_detection/config/: default.yaml
src/real_time_visual_defect_detection/evaluation/: metrics.py
src/real_time_visual_defect_detection/io/: dataset_loader.py
src/real_time_visual_defect_detection/models/: anomalib_adapter.py  anomalib_csflow_model.py  anomalib_draem_model.py  anomalib_padim_model.py  anomalib_patchcore_model.py  anomalib_stfpm_model.py  base.py  registry.py  subspacead_model.py
src/real_time_visual_defect_detection/models/rd4ad/: __init__.py  main.py  rd4ad_model.py  test.py
src/real_time_visual_defect_detection/pipelines/: run_pipeline.py
src/real_time_visual_defect_detection/preprocessing/: stream_simulation.py
src/real_time_visual_defect_detection/visualization/: __init__.py  dashboard.py  plots.py
tests/: test_inspection_runtime.py  test_pipeline_benchmark.py  test_registry.py
