[project]
name = "python_project_template"
version = "0.0.0"
description = "Python project template"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "python-dotenv>=1.0.0",
    "ruff>=0.14.11",
]

[project.optional-dependencies]
notebooks = [
    "ipykernel>=7.1.0",
]
test = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


