[project]
name = "real-time-visual-defect-detection"
version = "0.1.0"
description = "Thesis pipeline: real-time visual defect detection with robustness evaluation"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy",
  "pyyaml",
  "opencv-python",
  "scikit-learn",
  "torch",
  "torchvision",
  "anomalib>=1.0,<2.0",
  "psutil",
  "plotly",
  "pandas",
  "tqdm",
]

[project.optional-dependencies]
gpu = [
  "torch",
  "torchvision",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# uv-specific: route torch/torchvision to the PyTorch CUDA 12.4 wheel index
# only when the "gpu" extra is requested (`uv sync --extra gpu`).
# CPU installs (`uv sync` / `pip install -e .`) pull from PyPI as normal.
# ---------------------------------------------------------------------------

[[tool.uv.index]]
name = "pytorch-cu124"
url  = "https://download.pytorch.org/whl/cu124"
explicit = true   # only used when a [tool.uv.sources] rule references it

[tool.uv.sources]
torch       = [
  { index = "pytorch-cu124", extra = "gpu" },
]
torchvision = [
  { index = "pytorch-cu124", extra = "gpu" },
]
